--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -4,7 +4,7 @@
  [{"url": "https://github.com/leanprover/std4",
    "type": "git",
    "subDir": null,
-   "rev": "1d85fd7db28700b28043d6370dd1ebc426de4d5d",
+   "rev": "08ec2584b1892869e3a5f4122b029989bcb4ca79",
    "name": "std",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -22,7 +22,7 @@
   {"url": "https://github.com/leanprover-community/aesop",
    "type": "git",
    "subDir": null,
-   "rev": "2ae78a474ddf0a39bc2afb9f9f284d2e64f48a70",
+   "rev": "cebd10ba6d22457e364ba03320cfd9fc7511e520",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -49,7 +49,7 @@
   {"url": "https://github.com/leanprover-community/import-graph.git",
    "type": "git",
    "subDir": null,
-   "rev": "7d051a52c49ac25ee5a04c7a2a70148cc95ddab3",
+   "rev": "8079d2d1d0e073bde42eab159c24f4c2d0d3a871",
    "name": "importGraph",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -58,7 +58,7 @@
   {"url": "https://github.com/leanprover-community/mathlib4",
    "type": "git",
    "subDir": null,
-   "rev": "1dfae4b262932b0e74ebd9f36214546e38543ba6",
+   "rev": "e7d0ec3b0e6eba28ec671fd55d54891227ad0749",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -67,10 +67,10 @@
   {"url": "https://github.com/T-Brick/LeanColls",
    "type": "git",
    "subDir": null,
-   "rev": "05cb77e5688c4ab29f6171c5427ed5f790821f5e",
+   "rev": "9df7e392446523f4643eea6f2d5f0c547e692689",
    "name": "leancolls",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "list-nonempty",
+   "inputRev": "bump-v4.5.0",
    "inherited": false,
    "configFile": "lakefile.lean"}],
  "name": "pauline",
